fix:token_display font size increased for previous token heading and aligned the header title and notification bell icon to right side.

--- a/staticfiles/orders/css/base.css
+++ b/staticfiles/orders/css/base.css
@@ -2,10 +2,10 @@
     position: fixed !important;
     display: flex;
     justify-content: flex-end; 
-    top: 0 !important;
-    left: 0 !important;
-    width: 100% !important;
-    z-index: 1000 !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
     padding: 0.8rem 1rem !important; 
     background-color: rgba(255, 255, 255, 0.96) !important;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.08) !important;
