--- a/staticfiles/orders/css/token_display.css
+++ b/staticfiles/orders/css/token_display.css
@@ -17,6 +17,11 @@ body {
     justify-content: space-between; 
     align-items: center; 
 }
+.header-right {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
 /* Heading styles */
 .custom-header h2 {
     font-family: 'Montserrat', sans-serif;
@@ -246,10 +251,10 @@ body {
 /* XL Screens (1920px and above) */
 @media (min-width: 1920px) {
     .left-column .selected .order-number{
-        font-size:10rem;
+        font-size:16rem;
     }
     .left-column .order-number {
-        font-size: 8rem;
+        font-size: 14rem;
     }
     .right-column .order-number {
         font-size: 3rem;
@@ -261,7 +266,7 @@ body {
         font-size: 2.2rem;
     }
     .right-column .column-heading {
-        font-size: 1.8rem;
+        font-size: 2.1rem;
     }
     .custom-header h2 {
         font-size: 1.8rem;
@@ -270,27 +275,30 @@ body {
 
 /* Large Desktop Screens (2560px and above - 2K/QHD) */
 @media (min-width: 2560px) {
+    .left-column .selected .order-number{
+        font-size:18rem;
+    }
     .left-column .order-number {
-        font-size: 10rem;
+        font-size: 16rem;
     }
     .right-column .order-number {
         font-size: 4rem;
-    }
-    .column-heading {
-        font-size: 2.4rem;
     }
     .left-column .column-heading {
         font-size: 2.6rem;
     }
     .right-column .column-heading {
-        font-size: 2.2rem;
+        font-size: 2.4rem;
     }
 }
 
 /* 4K Screens (3840px and above) */
 @media (min-width: 3840px) {
+    .left-column .selected .order-number{
+        font-size:20rem;
+    }
     .left-column .order-number {
-        font-size: 12rem;
+        font-size: 18rem;
     }
     .right-column .order-number {
         font-size: 5rem;
